--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-refresh": "^0.16.0",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
